--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -907,30 +907,25 @@ pre {
 pre code {
   background: #FAFAFA;
   font-size: 2rem;
-  -webkit-transition: all 0.4s ease-out;
-  /* Saf3.2+, Chrome */
-  -moz-transition: all 0.4s ease-out;
-  /* Firefox 4-15 */
-  -o-transition: all 0.4s ease-out;
-  /* Opera 10.5+ */
-  transition: all 0.4s ease-out;
-  /* Firefox 16+ */
-  -webkit-border-radius: 6px;
-  /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
+  -webkit-transition: ease-out 0.4s all;
+  transition: ease-out 0.4s all;
   border-radius: 6px;
-  /* Opera 10.5, IE9, Saf5, Chrome, FF4+, iOS 4, Android 2.1+ */
   display: inline-block;
   /* fix space at beginning of code blocks */
+  width: 100%;
+}
+
+@media only screen and (min-width: 45.714285714em) {
+  pre code {
+    width: auto;
+  }
 }
 
 pre code:hover {
   background: #FCFCFC;
   -webkit-box-shadow: 0px 0px 5px 0px #AAA;
   box-shadow: 0px 0px 5px 0px #AAA;
-  -webkit-border-radius: 4px;
-  /* Saf3-4, iOS 1-3.2, Android ≤1.6 */
   border-radius: 4px;
-  /* Opera 10.5, IE9, Saf5, Chrome, FF4+, iOS 4, Android 2.1+ */
 }
 
 pre .copy {
